# gLayout

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: drc.yml  lvs.yml
docs/: SPEEDUP.md
src/glayout/: __init__.py
src/glayout/backend/: __init__.py  _active.py  _gdstk.py  _speedups.py  add_padding.py  cell.py  component.py  component_reference.py  config.py  functions.py  grid.py  pdk.py  polygon.py  port.py  snap.py  typings.py
src/glayout/backend/_cython/: __init__.py  _hotpaths.pyx
src/glayout/backend/components/: __init__.py
src/glayout/backend/geometry/: __init__.py
src/glayout/backend/read/: __init__.py
src/glayout/backend/routing/: __init__.py
src/glayout/pdk/: mappedpdk.py
src/glayout/pdk/gf180_mapped/: gf180_mapped.py
src/glayout/placement/: common_centroid_ab_ba.py  four_transistor_interdigitized.py  two_transistor_interdigitized.py  two_transistor_place.py
src/glayout/primitives/: bjt.py  fet.py  guardring.py  mimcap.py  resistor.py  via_gen.py
src/glayout/routing/: L_route.py  c_route.py  smart_route.py  straight_route.py
src/glayout/util/: comp_utils.py  component_array_create.py  geometry.py  port_utils.py  routing.py  snap_to_grid.py
src/glayout/verification/: evaluator_wrapper.py  physical_features.py  verification.py
tests/: README.md  conftest.py  run_ci_locally.py  test_cells_layout.py
tests/drc/: README.md  run_cell_drc.py
tests/lvs/: klayout_gf180.py  run_cell_lvs.py
tests/parameters/: ci_drc_gf180.csv  ci_drc_sky130.csv
tutorial/: GLayout_Cascode_OpAmp.ipynb  glayout_tutorial_5T_OTA_part1.ipynb
(+20 files in other folders)
